k8s/infrastructure/eureka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: springcloud/eureka
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
spec:
  selector:
    app: eureka
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
