k8s/infrastructure/istio-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default-strict-mtls
  namespace: default
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-mtls
  namespace: default
spec:
  action: DENY
  rules:
    - from:
        - source:
            notPrincipals: ["cluster.local/ns/default/sa/*"]
